# slg_bt_plugins

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_description.xml
behavior_trees/: dump_blackboard_data.xml  face_aware_nav.xml  fgs_data_to_blackboard.xml  minimal_pump.xml  nav_to_stop.xml  turn_to_human.xml
behavior_trees/no_pump/: face_aware_nav.xml
include/slg_bt_plugins/: cancel_nav_to_pose.hpp  dump_blackboard_data.hpp  fgs_to_bt_node.hpp  is_blackboard_string_equal_condition.hpp  is_face_detected_condition.hpp  is_false_condition.hpp  is_stop_gesture_condition.hpp  is_true_condition.hpp  set_blackboard_bool_action.hpp  set_blackboard_typed_actions.hpp  turn_toward_face_action.hpp
src/: a_node_registration.cpp  cancel_nav_to_pose.cpp  dump_blackboard_data.cpp  fgs_to_bt_node.cpp  is_blackboard_string_equal_condition.cpp  is_face_detected_condition.cpp  is_false_condition.cpp  is_stop_gesture_condition.cpp  is_true_condition.cpp  set_blackboard_bool_action.cpp  set_blackboard_typed_actions.cpp  turn_toward_face_action.cpp
