<?xml version="1.0"?>
<package format="3">
  <name>slg_bt_plugins</name>
  <version>0.0.1</version>
  <description>Behavior tree plugins for face detection and gesture commands</description>
  <maintainer email="slg@quakemap.com">Sergei Grichine</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
</package>
